@@ -20,6 +20,8 @@ See also [[https://github.com/haskell/haskell-mode/compare/v13.06...v13.07][deta
 
 - Remove deprecated `haskell-{hugs,ghci}' modules
 
+- Remove deprecated `turn-on-haskell-font-lock` function
+
 - Improvements to `haskell-move-nested' module:
   - Add support for operating on active regions
   - New interactive commands `haskell-move-nested-{left,right}` which
